Fixed table image spacing

--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -326,3 +326,9 @@ infobox {
     border-left: 0;
   }
 }
+
+table th img {
+  position: relative;
+  top: 2px;
+  margin-right: 3px;
+}
